fixing the font size for readability and adding the score card

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     height:100vh;
     justify-content: center;
     align-items: center;
+    font-size: 1.5rem;
 }
 
 img {
@@ -44,7 +45,7 @@ body.wrong {
     width: 800px;
     max-width: 80%;
     background-color: rgb(230, 222, 253);
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 10px;
     box-shadow: 0 0 10px 2px;
 }
@@ -52,8 +53,9 @@ body.wrong {
 .btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
-    gap: 30px;
-    margin: 30px 0;
+    gap: 20px;
+    margin: 30px ;
+    
 
 }
 
@@ -65,6 +67,7 @@ body.wrong {
     padding: 5px 10px;
     color: rgb(255, 255, 255);
     outline: none;
+    font-size: 1.25rem;
 }
 
 .btn:hover {
@@ -83,7 +86,7 @@ body.wrong {
 }
 
 .start-btn, .next-btn {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
     padding: 10px 20px;
 
@@ -102,4 +105,16 @@ body.wrong {
 
 body {
     background-image: url(https://i.pinimg.com/originals/39/d4/73/39d473c0f8b7b8c42e02ccc9253a7b50.gif);
+}
+
+.score {
+    position: fixed;
+    top: 170px;
+    left:395px;
+    font-size: 2rem;
+    border: 5px solid rgb(206, 113, 0);
+    background-color: rgb(245, 209, 6);
+    border-radius: 10px;
+    color: rgb(206, 113, 0);
+    padding: 10px;
 }
